--- a/Data_QA_EDA_Thefts.ipynb
+++ b/Data_QA_EDA_Thefts.ipynb
@@ -1150,7 +1150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -1488,7 +1488,7 @@
        "[68668 rows x 17 columns]"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1501,7 +1501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -1527,7 +1527,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1547,7 +1547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -1562,7 +1562,7 @@
        "Name: Arma empleada, dtype: int64"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1574,7 +1574,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -1589,7 +1589,7 @@
        "Name: Arma empleada, dtype: int64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1602,7 +1602,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -1612,7 +1612,7 @@
        "       'LOCALES COMERCIALES', 'OTRO', 'VIVIENDAS'], dtype=object)"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1634,7 +1634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 11,
    "metadata": {
     "tags": []
    },
@@ -1691,7 +1691,7 @@
        "NO REPORTA     32    0.000466"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3117,11 +3117,288 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Categoría de Sitio</th>\n",
+       "      <th>Porcentaje</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>VIAS PUBLICAS Y LOTES</th>\n",
+       "      <td>54154</td>\n",
+       "      <td>0.788635</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>LOCALES COMERCIALES</th>\n",
+       "      <td>9241</td>\n",
+       "      <td>0.134575</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>VIVIENDAS</th>\n",
+       "      <td>3452</td>\n",
+       "      <td>0.050271</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>SERVICIO Y ENTIDADES PUBLICAS</th>\n",
+       "      <td>1076</td>\n",
+       "      <td>0.015670</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>OTRO</th>\n",
+       "      <td>745</td>\n",
+       "      <td>0.010849</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                               Categoría de Sitio  Porcentaje\n",
+       "VIAS PUBLICAS Y LOTES                       54154    0.788635\n",
+       "LOCALES COMERCIALES                          9241    0.134575\n",
+       "VIVIENDAS                                    3452    0.050271\n",
+       "SERVICIO Y ENTIDADES PUBLICAS                1076    0.015670\n",
+       "OTRO                                          745    0.010849"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# clase de sitio\n",
+    "clase_sitio_dist = pd.concat(\n",
+    "    [\n",
+    "        df[\"Categoria de sitio\"].value_counts(),\n",
+    "        df[\"Categoria de sitio\"].value_counts() / df.shape[0],\n",
+    "    ],\n",
+    "    axis=1,\n",
+    ")\n",
+    "clase_sitio_dist.columns = [\"Categoría de Sitio\", \"Porcentaje\"]\n",
+    "clase_sitio_dist.head(10)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.to_csv(\"df_merged_clean.csv\", index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Fecha</th>\n",
+       "      <th>Municipio</th>\n",
+       "      <th>Día</th>\n",
+       "      <th>Hora</th>\n",
+       "      <th>Arma empleada</th>\n",
+       "      <th>Móvil Agresor</th>\n",
+       "      <th>Móvil Victima</th>\n",
+       "      <th>Edad</th>\n",
+       "      <th>Sexo</th>\n",
+       "      <th>Estado civil</th>\n",
+       "      <th>País de nacimiento</th>\n",
+       "      <th>Clase de empleado</th>\n",
+       "      <th>Escolaridad</th>\n",
+       "      <th>Cantidad</th>\n",
+       "      <th>GEOID</th>\n",
+       "      <th>Barrio</th>\n",
+       "      <th>Categoria de sitio</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>01/07/2019</td>\n",
+       "      <td>BARRANQUILLA (CT)</td>\n",
+       "      <td>Lunes</td>\n",
+       "      <td>19:00:00</td>\n",
+       "      <td>SIN EMPLEO DE ARMAS</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>FEMENINO</td>\n",
+       "      <td>SOLTERO</td>\n",
+       "      <td>NACIONAL</td>\n",
+       "      <td>EMPLEADO PARTICULAR</td>\n",
+       "      <td>PRIMARIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
+       "      <td>CORDIALIDAD</td>\n",
+       "      <td>VIAS PUBLICAS Y LOTES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>01/07/2019</td>\n",
+       "      <td>BARRANQUILLA (CT)</td>\n",
+       "      <td>Lunes</td>\n",
+       "      <td>09:30:00</td>\n",
+       "      <td>ARMA DE FUEGO</td>\n",
+       "      <td>CONDUCTOR MOTOCICLETA</td>\n",
+       "      <td>PASAJERO MOTOCICLETA</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>UNION LIBRE</td>\n",
+       "      <td>NACIONAL</td>\n",
+       "      <td>EMPLEADO PARTICULAR</td>\n",
+       "      <td>SECUNDARIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
+       "      <td>CORDIALIDAD</td>\n",
+       "      <td>VIAS PUBLICAS Y LOTES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>10/07/2019</td>\n",
+       "      <td>BARRANQUILLA (CT)</td>\n",
+       "      <td>Miércoles</td>\n",
+       "      <td>20:30:00</td>\n",
+       "      <td>ARMA DE FUEGO</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>FEMENINO</td>\n",
+       "      <td>CASADO</td>\n",
+       "      <td>NACIONAL</td>\n",
+       "      <td>EMPLEADO PARTICULAR</td>\n",
+       "      <td>SECUNDARIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
+       "      <td>CORDIALIDAD</td>\n",
+       "      <td>VIAS PUBLICAS Y LOTES</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>13/07/2019</td>\n",
+       "      <td>BARRANQUILLA (CT)</td>\n",
+       "      <td>Sábado</td>\n",
+       "      <td>18:30:00</td>\n",
+       "      <td>SIN EMPLEO DE ARMAS</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>UNION LIBRE</td>\n",
+       "      <td>NACIONAL</td>\n",
+       "      <td>EMPLEADO PARTICULAR</td>\n",
+       "      <td>SECUNDARIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
+       "      <td>CORDIALIDAD</td>\n",
+       "      <td>SERVICIO Y ENTIDADES PUBLICAS</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>21/07/2019</td>\n",
+       "      <td>BARRANQUILLA (CT)</td>\n",
+       "      <td>Domingo</td>\n",
+       "      <td>00:00:00</td>\n",
+       "      <td>SIN EMPLEO DE ARMAS</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>A PIE</td>\n",
+       "      <td>33.0</td>\n",
+       "      <td>MASCULINO</td>\n",
+       "      <td>SOLTERO</td>\n",
+       "      <td>NACIONAL</td>\n",
+       "      <td>EMPLEADO PARTICULAR</td>\n",
+       "      <td>SECUNDARIA</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137</td>\n",
+       "      <td>CORDIALIDAD</td>\n",
+       "      <td>VIAS PUBLICAS Y LOTES</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        Fecha          Municipio        Día      Hora        Arma empleada  \\\n",
+       "0  01/07/2019  BARRANQUILLA (CT)      Lunes  19:00:00  SIN EMPLEO DE ARMAS   \n",
+       "1  01/07/2019  BARRANQUILLA (CT)      Lunes  09:30:00        ARMA DE FUEGO   \n",
+       "2  10/07/2019  BARRANQUILLA (CT)  Miércoles  20:30:00        ARMA DE FUEGO   \n",
+       "3  13/07/2019  BARRANQUILLA (CT)     Sábado  18:30:00  SIN EMPLEO DE ARMAS   \n",
+       "4  21/07/2019  BARRANQUILLA (CT)    Domingo  00:00:00  SIN EMPLEO DE ARMAS   \n",
+       "\n",
+       "           Móvil Agresor         Móvil Victima  Edad       Sexo Estado civil  \\\n",
+       "0                  A PIE                 A PIE  39.0   FEMENINO      SOLTERO   \n",
+       "1  CONDUCTOR MOTOCICLETA  PASAJERO MOTOCICLETA  32.0  MASCULINO  UNION LIBRE   \n",
+       "2                  A PIE                 A PIE  40.0   FEMENINO       CASADO   \n",
+       "3                  A PIE                 A PIE  39.0  MASCULINO  UNION LIBRE   \n",
+       "4                  A PIE                 A PIE  33.0  MASCULINO      SOLTERO   \n",
+       "\n",
+       "  País de nacimiento    Clase de empleado Escolaridad  Cantidad  GEOID  \\\n",
+       "0           NACIONAL  EMPLEADO PARTICULAR    PRIMARIA         1    137   \n",
+       "1           NACIONAL  EMPLEADO PARTICULAR  SECUNDARIA         1    137   \n",
+       "2           NACIONAL  EMPLEADO PARTICULAR  SECUNDARIA         1    137   \n",
+       "3           NACIONAL  EMPLEADO PARTICULAR  SECUNDARIA         1    137   \n",
+       "4           NACIONAL  EMPLEADO PARTICULAR  SECUNDARIA         1    137   \n",
+       "\n",
+       "        Barrio             Categoria de sitio  \n",
+       "0  CORDIALIDAD          VIAS PUBLICAS Y LOTES  \n",
+       "1  CORDIALIDAD          VIAS PUBLICAS Y LOTES  \n",
+       "2  CORDIALIDAD          VIAS PUBLICAS Y LOTES  \n",
+       "3  CORDIALIDAD  SERVICIO Y ENTIDADES PUBLICAS  \n",
+       "4  CORDIALIDAD          VIAS PUBLICAS Y LOTES  "
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv(\"df_merged_clean.csv\")\n",
+    "df.head()"
    ]
   },
   {
@@ -3133,7 +3410,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3153,7 +3430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -3539,7 +3816,7 @@
        "[68668 rows x 23 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3582,7 +3859,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -3591,7 +3868,7 @@
        "(68668, 20)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -7159,6 +7436,131 @@
    ],
    "source": [
     "r2_score(y_test, rf.predict(X_test))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Explicabilidad de los resultados con LIME\n",
+    "LIME es el acrónimo de Local Interpretable Model-agnostic Explanations. Este paquete de Machine Learning nos permite explicar la importancia de los features para una predicción específica. Con esto, podremos saber que factores están afectando más la predicción y por que el modelo está arrojando los resultados que arroja. Para usar lime, importaremos el módulo `lime`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<lime.lime_tabular.LimeTabularExplainer at 0x7f7d213a92e0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Entrenando el modelo LIME que nos permite explicar la importancia de los features\n",
+    "from lime import lime_tabular\n",
+    "\n",
+    "explainer = lime_tabular.LimeTabularExplainer(\n",
+    "    X_train, mode=\"regression\", feature_names=X_cat.columns\n",
+    ")\n",
+    "explainer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Prediction :  [1.049087]\n",
+      "Actual :      1\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<lime.explanation.Explanation at 0x7f7d213a9370>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "# Seleccionando un valor aleatorio de test\n",
+    "idx = random.randint(1, len(X_test))\n",
+    "\n",
+    "print(\"Prediction : \", model_poisson.predict(X_test[idx].reshape(1, -1)))\n",
+    "print(\"Actual :     \", y_test[idx])\n",
+    "\n",
+    "explanation = explainer.explain_instance(\n",
+    "    X_test[idx], model_poisson.predict, num_features=len(X_cat.columns)\n",
+    ")\n",
+    "explanation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Barrio_BETANIA                               1.0\n",
+       "Categoria de sitio_VIAS PUBLICAS             1.0\n",
+       "Arma empleada_ARMA BLANCA / CORTOPUNZANTE    1.0\n",
+       "Month_6                                      1.0\n",
+       "WeekDay_6                                    1.0\n",
+       "Timeframe_Noche                              1.0\n",
+       "Name: 4844, dtype: float64"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "X_cat.iloc[idx, :][X_cat.iloc[idx, :] == 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "explanation.show_in_notebook()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with plt.style.context(\"ggplot\"):\n",
+    "    explanation.as_pyplot_figure()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from IPython.display import HTML\n",
+    "\n",
+    "html_data = explanation.as_html()\n",
+    "HTML(data=html_data)"
    ]
   },
   {
